feat:repair issues 359 (#389)
* repair issues 359

* change code logic compile

---------

Co-authored-by: “yanzhangpeng” <“122567185@qq.com”>

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -44,8 +44,8 @@
     <MCol Cols="10">
         <div class="bizCard">
             <h6 class="emphasis2--text h6">@T("Business configuration")</h6>
-            <MCard Ripple=false Class="mt-6 rounded-5" Height="163"
-                    OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(_bizDetail.Id, _projectEnvClusters[0].Id, ConfigObjectType.Biz, ProjectId))">
+            <MCard Ripple=false Class="mt-4 rounded-5" Height="163"
+                   OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(_bizDetail.Id, _projectEnvClusters[0].Id, ConfigObjectType.Biz, ProjectId))">
                 <MCardTitle Class="pb-0" Style="font-size: medium; flex-wrap:nowrap;">
                     <div class="emphasis2--text h7" @onclick:stopPropagation>
                         @if (!_isEditBiz)
@@ -78,7 +78,7 @@
                     </MButton>
                 </MCardTitle>
                 <div class="regular3--text pl-4 body2 text-overflow">@_bizDetail.Identity</div>
-                <MCardActions Class="pa-0 mx-4" Style="position: absolute; bottom: 16px; right: 0; left: 0;">
+                <MCardActions Class="pa-0 mx-3" Style="position: absolute; bottom: 16px; right: 0; left: 0;">
                     <MChipGroup @key="_projectEnvClusters" Class="env-cluster-chip-group" ActiveClass="primary--text">
                         @foreach (var item in _projectEnvClusters)
                         {
@@ -93,8 +93,8 @@
             </MCard>
         </div>
         <div class="appCard mt-6">
-            <div class="d-flex justify-space-between align-end">
-                <h6 class="emphasis2--text h6">@T("App")</h6>
+            <div class="d-flex justify-space-between">
+                <div class="emphasis2--text h6 mt-1">@T("App")</div>
                 <MTextField @bind-Value="_appName" OnKeyDown="SearchApp" Style="max-width:300px;" Class="rounded-2" Height="40" Flat Dense Solo HideDetails="@("auto")" Placeholder="@T("Please enter the app name and press enter to query")">
                     <PrependInnerContent>
                         <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
@@ -102,25 +102,37 @@
                 </MTextField>
             </div>
             <div class="mt-6" style="width:100%; height: calc(100vh - 497px);overflow-y:auto; overflow-x:hidden;">
-                <MRow>
-                    @foreach (var app in _apps)
-                    {
-                        <MCol Lg="4" Md="6" Sm="12">
-                            <AppCard OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, app.EnvironmentClusters[0].Id, ConfigObjectType.App, app.ProjectId))" Style="border: none;" OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
-                                <MChipGroup @key="app.EnvironmentClusters" Class="env-cluster-chip-group" ActiveClass="primary--text">
-                                    @foreach (var item in app.EnvironmentClusters)
-                                    {
-                                        <EnvClusterChip OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, item.Id, ConfigObjectType.App, ProjectId))"
-                                                Style="margin:0 12px 1px 0;"
-                                                EnvironmentName="@item.EnvironmentName"
-                                                EnvironmentColor="@item.EnvironmentColor"
-                                                ClusterName="@item.ClusterName" />
-                                    }
-                                </MChipGroup>
-                            </AppCard>
-                        </MCol>
-                    }
-                </MRow>
+                @if(_apps?.Any() == false)
+                {
+                    <MCard Class="rounded-5 full-height full-width pl-3 pr-3 fill">
+                        <MCardText Class="d-flex align-center justify-center flex-column">
+                            <MCard Height="300" Width="300" Class="rounded-5 fill-background"></MCard>
+                            <div style="font-size:14px;" class="mt-12 pl-6 regular2--text">@T("Hey, there is no APP yet~ Please contact the project administrator~")</div>
+                        </MCardText>
+                    </MCard>
+                }
+                else
+                {
+                    <MRow>
+                        @foreach (var app in _apps)
+                        {
+                            <MCol Lg="4" Md="6" Sm="12">
+                                <AppCard OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, app.EnvironmentClusters[0].Id, ConfigObjectType.App, app.ProjectId))" Style="border: none;" OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                    <MChipGroup @key="app.EnvironmentClusters" Class="env-cluster-chip-group" ActiveClass="primary--text">
+                                        @foreach (var item in app.EnvironmentClusters)
+                                        {
+                                            <EnvClusterChip OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, item.Id, ConfigObjectType.App, ProjectId))"
+                                                            Style="margin:0 12px 1px 0;"
+                                                            EnvironmentName="@item.EnvironmentName"
+                                                            EnvironmentColor="@item.EnvironmentColor"
+                                                            ClusterName="@item.ClusterName" />
+                                        }
+                                    </MChipGroup>
+                                </AppCard>
+                            </MCol>
+                        }
+                    </MRow>
+                }
             </div>
         </div>
     </MCol>
