i18n: long key change to short key

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -154,7 +154,7 @@
                     <div style="width: calc(100% - 48px); position: absolute; bottom: 0; right: 24px">
                         <MAlert Prominent
                             Type="AlertTypes.Warning">
-                        @T("The configuration object name conflicts, and the same configuration object name will overwrite the configuration information. If you need to clone, please modify the configuration object name")
+                            @T("ConfigurationObjectNameConflicts")
                         </MAlert>
                     </div>
                 }
@@ -401,7 +401,7 @@
                         <div style="width: calc(100% - 48px); position: absolute; bottom: 0;">
                             <MAlert Prominent
                                 Type="AlertTypes.Warning">
-                                @T("The configuration object name conflicts, and the same configuration object name will overwrite the configuration information. If you need to clone, please modify the configuration object name")
+                                @T("ConfigurationObjectNameConflicts")
                             </MAlert>
                         </div>
                     }
